# hypnagogic

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  README.md  hypnastic_conf.toml  justfile
.github/workflows/: ci.yml  release.yml
cutter2_cli/: Cargo.toml
cutter2_cli/src/: main.rs
cutter2_core/: Cargo.toml  test.yaml
cutter2_core/src/: adjacency.rs  corners.rs  lib.rs
cutter2_core/src/config/: mod.rs  template_resolver.rs
cutter2_core/src/modes/: bitmask_slice.rs  mod.rs
cutter2_core/src/modes/cutters/: bitmask_dir_visibility.rs  bitmask_slice.rs  bitmisk_dir_visibility.rs  mod.rs
cutter2_core/src/util/: adjacency.rs  corners.rs  mod.rs
cutter2_core/tests/: sandbox.rs
examples/: bitmask-slice-dir-cut.toml  bitmask-slice-restore.toml  bitmask-slice-windows.toml  bitmask-slice-windows.yaml  bitmask-slice.toml  bitmask-slice.yaml
hypnagogic_cli/: Cargo.toml
hypnagogic_cli/src/: error.rs  main.rs
hypnagogic_cli/tests/: regressions.rs
hypnagogic_cli/tests/test_files/: .gitignore
hypnagogic_cli/tests/test_files/basic_cut/expected/input/: tall-5-corners-debug.dmi
hypnagogic_cli/tests/test_files/simple_cuts/expected/input/: 4-corners.dmi  5-corners.dmi
hypnagogic_cli/tests/test_files/simple_cuts/input/: 4-corners.toml  5-corners.toml
hypnagogic_cli/tests/test_files/tall_cuts/expected/input/: tall-5-corners.dmi
hypnagogic_cli/tests/test_files/tall_cuts_with_vis/expected/input/: boss_wall.dmi  tall-5-corners-dirvis.dmi
hypnagogic_cli/tests/test_files/tall_cuts_with_vis/input/: tall-5-corners-dirvis.toml
hypnagogic_cli/tests/util/: deep_dir_compare.rs  dir_tester.rs  mod.rs  run.rs
hypnagogic_core/: Cargo.toml
hypnagogic_core/src/: lib.rs
hypnagogic_core/src/config/: error.rs  mod.rs  template_resolver.rs
hypnagogic_core/src/config/blocks/: cutters.rs  generators.rs  mod.rs
hypnagogic_core/src/config/template_resolver/: error.rs  file_resolver.rs  mod.rs
hypnagogic_core/src/generation/: error.rs  icon.rs  mod.rs  rect.rs  text.rs
hypnagogic_core/src/modes/: error.rs  mod.rs
hypnagogic_core/src/modes/cutters/: bitmask_dir_visibility.rs  bitmask_slice.rs  bitmask_windows.rs  mod.rs
hypnagogic_core/src/modes/format_converter/: mod.rs
hypnagogic_core/src/operations/: error.rs  mod.rs
hypnagogic_core/src/operations/cutters/: bitmask_dir_visibility.rs  bitmask_slice.rs  bitmask_windows.rs  mod.rs
hypnagogic_core/src/operations/format_converter/: bitmask_to_precut.rs
hypnagogic_core/src/util/: adjacency.rs  color.rs  corners.rs  icon_ops.rs  mod.rs
hypnagogic_core/tests/res/: 5-corners.yaml
hypnastic/: Cargo.toml
hypnastic/src/: app.rs  lib.rs  main.rs
hypnastic/src/editor/: basic_slice_editor.rs  mod.rs
in_test/res/: 4-corners.yaml  5-corners.yaml  boss_wall.toml  boss_wall.yaml  hiero_wall_basic_cut.png.toml  hiero_wall_basic_cut.yaml  reinf_glass.yaml  tall-5-corners-debug.toml  tall-5-corners-dirvis.yaml  tall-5-corners.png.toml  tall-5-corners.yaml  the-funny-config.yaml  window-normal-wallsmooth.toml  window-template.ase
templates/bitmask/: slice-32x32-diagonals.toml  slice-32x32-diagonals.yaml  slice-32x32.toml  slice-32x32.yaml  slice-tallwalls-directionalvis.toml  slice-tallwalls-directionalvis.yaml  slice-tallwalls.toml  slice-tallwalls.yaml
