[package]
name = "hypnagogic-cli"
description = "CLI Tool for processing icons in to the DMI format"
version = "2.0.0"
edition = "2021"
license = "AGPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["suggestions", "deprecated", "derive", "wrap_help"] }
dmi = "0.2"
dont_disappear = "3.0"
image = { version = "0.24", default-features = false, features = ["png", "gif"] }
rayon = "1.5"
serde = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
user-error ="1.2"
walkdir = "2.3"
hypnagogic-core = { path = "../hypnagogic_core" }
