[package]
name = "hypnagogic-core"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
derive_more = "0.99"
dmi = { git = "https://github.com/actioninja/dmi-rust.git", branch = "updated-libraries" }
dont_disappear = "3.0"
enum_dispatch = "0.3"
enum-iterator = "1.2"
fixed-map = { version = "0.7", features = ["serde"] }
image = "0.24"
serde = "1.0"
serde_yaml = "0.9"
serde_with = "2.0"
shrinkwraprs = "0.3"
thiserror = "1.0"
tracing = "0.1"
walkdir = "2.3"
