[package]
name = "hypnagogic-core"
version = "2.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
dmi = "0.2"
enum_dispatch = "0.3"
enum-iterator = "1.2"
fixed-map = { version = "0.8", features = ["serde"] }
image = { version = "0.24", default-features = false, features = ["png", "gif"] }
once_cell = "1.17.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.7.2"
tracing = "0.1"
