[package]
name = "hypnastic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.21"
egui_dock = "0.5"
eframe = { version = "0.21", features = ["default_fonts", "glow", "persistence"] }
image = "0.24"
rfd = "0.11"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
toml_edit = "0.19"
hypnagogic-core = { path = "../hypnagogic_core" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"

[profile.dev.package."*"]
opt-level = 2

